commit: update index.html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <footer class="footer" id="footer">
     <div class="footer__bar">
-        Copyright © 2024 Web Design Mastery. All rights reserved.
+        Copyright © 2024 RocketNotes. All rights reserved.
     </div>
 </footer>
 
